--- a/tutorials/Custom_models.ipynb
+++ b/tutorials/Custom_models.ipynb
@@ -7,12 +7,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scQUEST as scq \n",
+    "import scQUEST as scq\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.utils.data import Dataset, DataLoader, random_split\n",
     "import torchmetrics\n",
     "import pytorch_lightning as pl\n",
+    "\n",
     "\n",
     "class MyTorchModel(nn.Module):\n",
     "\n",
@@ -115,7 +116,7 @@
    "outputs": [],
    "source": [
     "# data\n",
-    "ad = sp.dataset.breastCancerAtlas()\n",
+    "ad = scq.dataset.breastCancerAtlas()\n",
     "ad = ad[(ad.obs.celltype_class == 'epithelial') & (ad.obs.tissue_type == 'N'), :10]\n",
     "\n",
     "# convert to torch dataset\n",
@@ -129,7 +130,7 @@
     "print(module)\n",
     "\n",
     "# training with custom model and data\n",
-    "Abn = sp.Abnormality(model=module)\n",
+    "Abn = scq.Abnormality(model=module)\n",
     "Abn.fit(datamodule=dm, early_stopping=[], max_epochs=1)"
    ]
   }
