--- a/tutorials/scQUEST_tutorial.ipynb
+++ b/tutorials/scQUEST_tutorial.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f2ac8069",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "e7e74794",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "    uns: 'fcs_header'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,16 +255,6 @@
     "To train your model on a custom list of markers, replace `'marker1'`,`'marker2'` etc in the cell below with your desired markers names. \n",
     "\n",
     "**Attention**: marker names should be as they appear in `ad_anno.var['desc']`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "a8c3ada7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# marker = ['marker1','marker2','marker3'] <------remove comment and replace with your marker names"
    ]
   },
   {
@@ -489,13 +479,7 @@
       "Validating:  81%|██████████████████████▌     | 195/242 [00:00<00:00, 264.17it/s]\u001B[A\n",
       "Epoch 8: 100%|██████| 2417/2417 [00:18<00:00, 129.76it/s, loss=0.321, v_num=0.1]\u001B[A\n",
       "Epoch 9:  90%|█████▍| 2176/2417 [00:17<00:01, 123.45it/s, loss=0.321, v_num=0.1]\u001B[A\n",
-      "Validating: 0it [00:00, ?it/s]\u001B[A\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Validating: 0it [00:00, ?it/s]\u001B[A\n",
       "Validating:   0%|                                       | 0/242 [00:00<?, ?it/s]\u001B[A\n",
       "Epoch 9:  91%|█████▍| 2208/2417 [00:17<00:01, 124.24it/s, loss=0.321, v_num=0.1]\u001B[A\n",
       "Epoch 9:  93%|█████▌| 2240/2417 [00:17<00:01, 125.13it/s, loss=0.321, v_num=0.1]\u001B[A\n",
@@ -597,13 +581,7 @@
       "Epoch 17:  97%|█████▊| 2336/2417 [00:18<00:00, 126.83it/s, loss=0.32, v_num=0.1]\u001B[A\n",
       "Epoch 17:  98%|█████▉| 2368/2417 [00:18<00:00, 127.74it/s, loss=0.32, v_num=0.1]\u001B[A\n",
       "Epoch 17:  99%|█████▉| 2400/2417 [00:18<00:00, 128.62it/s, loss=0.32, v_num=0.1]\u001B[A\n",
-      "Epoch 17: 100%|██████| 2417/2417 [00:18<00:00, 129.02it/s, loss=0.32, v_num=0.1]\u001B[A\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 17: 100%|██████| 2417/2417 [00:18<00:00, 129.02it/s, loss=0.32, v_num=0.1]\u001B[A\n",
       "Epoch 18:  90%|█████▍| 2176/2417 [00:17<00:01, 125.01it/s, loss=0.32, v_num=0.1]\u001B[A\n",
       "Validating: 0it [00:00, ?it/s]\u001B[A\n",
       "Validating:   0%|                                       | 0/242 [00:00<?, ?it/s]\u001B[A\n",
@@ -706,13 +684,7 @@
       "Epoch 26:  98%|████▉| 2368/2417 [00:17<00:00, 133.96it/s, loss=0.319, v_num=0.1]\u001B[A\n",
       "Epoch 26: 100%|█████| 2417/2417 [00:17<00:00, 135.30it/s, loss=0.319, v_num=0.1]\u001B[A\n",
       "Epoch 27:  90%|████▌| 2176/2417 [00:18<00:01, 120.65it/s, loss=0.319, v_num=0.1]\u001B[A\n",
-      "Validating: 0it [00:00, ?it/s]\u001B[A\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Validating: 0it [00:00, ?it/s]\u001B[A\n",
       "Validating:   0%|                                       | 0/242 [00:00<?, ?it/s]\u001B[A\n",
       "Epoch 27:  91%|████▌| 2208/2417 [00:18<00:01, 121.53it/s, loss=0.319, v_num=0.1]\u001B[A\n",
       "Epoch 27:  93%|████▋| 2240/2417 [00:18<00:01, 122.40it/s, loss=0.319, v_num=0.1]\u001B[A\n",
