replace EpithelialClassifier with Classifier

--- a/tutorials/scQUEST_tutorial.ipynb
+++ b/tutorials/scQUEST_tutorial.ipynb
@@ -790,7 +790,7 @@
    ],
    "source": [
     "# initialize model and train classifier\n",
-    "clf = scq.EpithelialClassifier(n_in=ad_anno.shape[1], seed=1)\n",
+    "clf = scq.Classifier(n_in=ad_anno.shape[1], seed=1)\n",
     "clf.fit(ad_anno, layer='arcsinh_norm', target='is_epithelial', max_epochs=50, seed=1)"
    ]
   },
