--- a/tutorials/scQUEST_tutorial.ipynb
+++ b/tutorials/scQUEST_tutorial.ipynb
@@ -36,10 +36,9 @@
     "import seaborn as sns\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.preprocessing import MinMaxScaler, LabelEncoder\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.metrics import confusion_matrix, roc_curve\n",
     "from sklearn import preprocessing\n",
-    "import torch\n",
     "import warnings\n",
     "\n",
     "warnings.filterwarnings('ignore')"
@@ -363,7 +362,8 @@
    "source": [
     "# define early stopping criterion\n",
     "from pytorch_lightning.callbacks.early_stopping import EarlyStopping\n",
-    "es = EarlyStopping(monitor='val_loss',mode='min',min_delta=1e-3,patience=10)"
+    "\n",
+    "es = EarlyStopping(monitor='val_loss', mode='min', min_delta=1e-3, patience=10)"
    ]
   },
   {
@@ -837,7 +837,7 @@
    "source": [
     "# initialize model and train classifier\n",
     "clf = scq.Classifier(n_in=ad_anno.shape[1], seed=1)\n",
-    "clf.fit(ad_anno, layer='arcsinh_norm', target='is_epithelial', callbacks=[es], max_epochs=50, seed=1)"
+    "clf.fit(ad_anno, layer='arcsinh_norm', target='is_epithelial', callbacks=[es], max_epochs=1, seed=1)"
    ]
   },
   {
@@ -963,9 +963,10 @@
    "source": [
     "# %% plot ROC curve\n",
     "import torch\n",
+    "\n",
     "yhat = clf.model(data)\n",
     "yhat1 = clf.model.model(data).detach()  # here we access the actual pytorch model\n",
-    "yhat1 = torch.softmax(yhat1,dim=1)  # compute propabilities\n",
+    "yhat1 = torch.softmax(yhat1, dim=1)  # compute propabilities\n",
     "tmp = np.array([yhat1[i][yhat[i]] for i in range(len(yhat))])\n",
     "score = np.zeros_like(yhat, dtype=float) - 1\n",
     "score[yhat == 1] = tmp[yhat == 1]\n",
