--- a/tutorials/Custom_models.ipynb
+++ b/tutorials/Custom_models.ipynb
@@ -38,7 +38,7 @@
    "id": "f3375481-c338-4a29-affc-1df547fa8e18",
    "metadata": {},
    "source": [
-    "## Custome Models\n",
+    "## Custom Models\n",
     "The models used by the `Classifier` or the `Abnormality` class are defined in [pytorch](https://pytorch.org/) and [pytorch lightning](https://www.pytorchlightning.ai/). When using custome models we can either:\n",
     "\n",
     "    1. Define a model with pytorch\n",
