--- a/tutorials/Custom_models.ipynb
+++ b/tutorials/Custom_models.ipynb
@@ -5,7 +5,7 @@
    "id": "53a9a30b-1107-40db-8ad5-4f0eb5ada99c",
    "metadata": {},
    "source": [
-    "# Custome Models, Training & Data Loaders"
+    "# Custom Models, Training & Data Loaders"
    ]
   },
   {
@@ -39,12 +39,12 @@
    "metadata": {},
    "source": [
     "## Custom Models\n",
-    "The models used by the `Classifier` or the `Abnormality` class are defined in [pytorch](https://pytorch.org/) and [pytorch lightning](https://www.pytorchlightning.ai/). When using custome models we can either:\n",
+    "The models used by the `Classifier` or the `Abnormality` class are defined in [PyTorch](https://pytorch.org/) and [PyTorch Lightning](https://www.pytorchlightning.ai/). When using custom models we can either:\n",
     "\n",
-    "    1. Define a model with pytorch\n",
-    "    2. Derive a pytorch lightning module from the pytorch model\n",
+    "    1. Define a model with PyTorch\n",
+    "    2. Derive a PyTorch Lightning module from the PyTorch model\n",
     "    \n",
-    "Using the pytorch lightning module enbales the advanced user to furhter customise the training of the model itself."
+    "Using the pytorch lightning module enables the advanced user to further customize the training of the model itself."
    ]
   },
   {
@@ -53,9 +53,9 @@
    "metadata": {},
    "source": [
     "### Pytorch Model\n",
-    "To learn more about how to define pytorch models refer to its exhaustive [documentation](https://pytorch.org/tutorials/).\n",
+    "To learn more about how to define PyTorch models refer to its exhaustive [documentation](https://pytorch.org/tutorials/).\n",
     "\n",
-    "In the _scQUEST Tutorial_ we used 36 features but one might have much more features and thus prefer different auto-encoder architecture. In the following snippet we define a new model that expects more features and a is a bit deeper than the default model."
+    "In the _scQUEST Tutorial_ we used by default 36 input features, but this can be easily tuned to fit different needs. In the following snippet we define a new model with more features than the default model."
    ]
   },
   {
@@ -89,7 +89,7 @@
    "id": "945cf8b4-77e9-49f8-a0f0-56c4a0493b22",
    "metadata": {},
    "source": [
-    "use the auto-encoder on some random data"
+    "use the autoencoder on some random data:"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "metadata": {},
    "source": [
     "#### Apply Pytorch Model\n",
-    "Thats already it. We can now pass the model as an argument."
+    "That's already it. We can now pass the model as an argument:"
    ]
   },
   {
@@ -148,8 +148,8 @@
    "id": "2eb3dd3e-17c1-45e6-8178-3e50791a733e",
    "metadata": {},
    "source": [
-    "### Pytorch Lightning Module\n",
-    "In the next step we derive a lightning module from our model. The lightning module defines all the steps to train our auto-encoder. Advanced users can further custmize the model training.\n",
+    "### PyTorch Lightning Module\n",
+    "In the next step we derive a lightning module from our model. The lightning module defines all the steps to train our autoencoder. Advanced users can further customize the model training.\n",
     "Note how we define a new `forward` function and how it differs from the `forward` function we defined in `MyTorchModel`. The `forward` function of `MyTorchModel` will return the reconstructed input data, on the other hand, in `MyLightningModule` we return the reconstruction error!"
    ]
   },
@@ -260,7 +260,7 @@
    "id": "838054cb-6930-4a97-b22a-5d2860cffd56",
    "metadata": {},
    "source": [
-    "#### Apply Custome Module\n",
+    "#### Apply Custom Module\n",
     "And as before we pass the module as argument."
    ]
   },
@@ -291,7 +291,7 @@
    "metadata": {},
    "source": [
     "### Pytorch Dataset\n",
-    "To continue the auto-encoder example we will now create our own datamodule for the training. In a first step we create a `pytorch.Dataset` class"
+    "To continue the autoencoder example, we will now create our own datamodule for the training. In a first step we create a `pytorch.Dataset` class"
    ]
   },
   {
@@ -886,7 +886,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
