--- a/tutorials/AML_EDA.ipynb
+++ b/tutorials/AML_EDA.ipynb
@@ -46,7 +46,9 @@
     }
    ],
    "source": [
-    "fpath = Path('/Users/art/Downloads/Datasets/Levine_CyTOF_AML_AnnotatedCellTypes/ad_annotated_cell_types.h5ad')\n",
+    "fpath = Path(\n",
+    "    \"/Users/art/Downloads/Datasets/Levine_CyTOF_AML_AnnotatedCellTypes/ad_annotated_cell_types.h5ad\"\n",
+    ")\n",
     "assert fpath.is_file()\n",
     "ad_anno = anndata.read_h5ad(fpath)\n",
     "ad_anno"
@@ -73,7 +75,9 @@
     }
    ],
    "source": [
-    "fpath = Path('/Users/art/Downloads/Datasets/Levine_CyTOF_AML_Healthy_vs_AML/ad_healty_aml.h5ad')\n",
+    "fpath = Path(\n",
+    "    \"/Users/art/Downloads/Datasets/Levine_CyTOF_AML_Healthy_vs_AML/ad_healty_aml.h5ad\"\n",
+    ")\n",
     "assert fpath.is_file()\n",
     "ad_pat = anndata.read_h5ad(fpath)\n",
     "ad_pat"
@@ -86,10 +90,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ad_anno.var.usedforPhenoGraphclustering = ad_anno.var.usedforPhenoGraphclustering.map(lambda x: x == 'yes')\n",
-    "ad_anno.var.usedformanualannotation = ad_anno.var.usedformanualannotation.map(lambda x: x == 'yes')\n",
+    "ad_anno.var.usedforPhenoGraphclustering = ad_anno.var.usedforPhenoGraphclustering.map(\n",
+    "    lambda x: x == \"yes\"\n",
+    ")\n",
+    "ad_anno.var.usedformanualannotation = ad_anno.var.usedformanualannotation.map(\n",
+    "    lambda x: x == \"yes\"\n",
+    ")\n",
     "\n",
-    "ad_pat.var.usedforPhenoGraphclustering = ad_pat.var.usedforPhenoGraphclustering.map(lambda x: x == 'yes')"
+    "ad_pat.var.usedforPhenoGraphclustering = ad_pat.var.usedforPhenoGraphclustering.map(\n",
+    "    lambda x: x == \"yes\"\n",
+    ")"
    ]
   },
   {
@@ -118,7 +128,7 @@
     }
    ],
    "source": [
-    "(ad_pat.obs.tissue == 'healthy').sum()"
+    "(ad_pat.obs.tissue == \"healthy\").sum()"
    ]
   },
   {
@@ -191,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ad = ad_pat[ad_pat.obs.tissue == 'healthy']"
+    "ad = ad_pat[ad_pat.obs.tissue == \"healthy\"]"
    ]
   },
   {
@@ -229,7 +239,7 @@
     "np.arcsinh(X, out=X)\n",
     "\n",
     "# add transformed data to a separate layer in the annData object\n",
-    "ad.layers['arcsinh'] = X"
+    "ad.layers[\"arcsinh\"] = X"
    ]
   },
   {
@@ -239,8 +249,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "markers = ['CD' + str(i) for i in [34, 38, 117, 123, 33, 47, 45, 15, 7, 19, 64, 3]]\n",
-    "markers = markers[:3] + ['HLA-DR'] + markers[3:]\n",
+    "markers = [\"CD\" + str(i) for i in [34, 38, 117, 123, 33, 47, 45, 15, 7, 19, 64, 3]]\n",
+    "markers = markers[:3] + [\"HLA-DR\"] + markers[3:]\n",
     "sad = ad[:, ad.var.marker.isin(markers)]"
    ]
   },
@@ -265,11 +275,11 @@
    "source": [
     "X = sad.X\n",
     "minmax.fit(X)\n",
-    "minmax.data_max_ = np.quantile(X, .995, axis=0)\n",
+    "minmax.data_max_ = np.quantile(X, 0.995, axis=0)\n",
     "X = minmax.transform(X)\n",
     "\n",
     "X = pd.DataFrame(X, columns=sad.var.marker, index=sad.obs.celltype)\n",
-    "X = X.groupby('celltype').agg('mean')\n",
+    "X = X.groupby(\"celltype\").agg(\"mean\")\n",
     "X = X[markers]\n",
     "Xmean = X.copy()"
    ]
@@ -281,13 +291,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = sad.layers['arcsinh']\n",
+    "X = sad.layers[\"arcsinh\"]\n",
     "minmax.fit(X)\n",
-    "minmax.data_max_ = np.quantile(X, .995, axis=0)\n",
+    "minmax.data_max_ = np.quantile(X, 0.995, axis=0)\n",
     "X = minmax.transform(X)\n",
     "\n",
     "X = pd.DataFrame(X, columns=sad.var.marker, index=sad.obs.celltype)\n",
-    "X = X.groupby('celltype').agg('mean')\n",
+    "X = X.groupby(\"celltype\").agg(\"mean\")\n",
     "X = X[markers]\n",
     "XarcsinhMean = X.copy()"
    ]
@@ -315,7 +325,7 @@
     "fig, axs = plt.subplots(1, 2, figsize=(12, 6))\n",
     "ax = sns.heatmap(Xmean.T, ax=axs[0])\n",
     "ax = sns.heatmap(XarcsinhMean.T, ax=axs[1])\n",
-    "for ax, title in zip(axs, ['mean', 'arcsinh + mean']):\n",
+    "for ax, title in zip(axs, [\"mean\", \"arcsinh + mean\"]):\n",
     "    ax.set_title(title)\n",
     "fig.tight_layout()"
    ]
@@ -514,9 +524,9 @@
     }
    ],
    "source": [
-    "X = sad.layers['arcsinh']\n",
+    "X = sad.layers[\"arcsinh\"]\n",
     "X = pd.DataFrame(X, columns=sad.var.marker, index=sad.obs.celltype)\n",
-    "X = X.groupby('celltype').agg('mean')\n",
+    "X = X.groupby(\"celltype\").agg(\"mean\")\n",
     "X = X[markers]\n",
     "X"
    ]
