--- a/tutorials/tutorial_on_downsampling_and_clustering.ipynb
+++ b/tutorials/tutorial_on_downsampling_and_clustering.ipynb
@@ -93,7 +93,7 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import scanpy as sc\n",
     "\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -127,9 +127,9 @@
     "ad_raw = scq.dataset.breastCancerAtlasRaw()\n",
     "\n",
     "plt.figure(figsize=(30, 8))\n",
-    "ad_raw.obs['patient_number'].value_counts().plot(kind='bar')\n",
-    "plt.xlabel('Patient ID')\n",
-    "plt.ylabel('Number of cells')\n",
+    "ad_raw.obs[\"patient_number\"].value_counts().plot(kind=\"bar\")\n",
+    "plt.xlabel(\"Patient ID\")\n",
+    "plt.ylabel(\"Number of cells\")\n",
     "plt.show()"
    ]
   },
@@ -148,7 +148,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ad_sub = ad_raw[ad_raw.obs.groupby('patient_number').sample(n=1000, random_state=1).index]"
+    "ad_sub = ad_raw[\n",
+    "    ad_raw.obs.groupby(\"patient_number\").sample(n=1000, random_state=1).index\n",
+    "]"
    ]
   },
   {
@@ -179,29 +181,35 @@
     }
    ],
    "source": [
-    "counts = ad_raw.obs['patient_number'].value_counts().to_dict()\n",
+    "counts = ad_raw.obs[\"patient_number\"].value_counts().to_dict()\n",
     "\n",
     "# perform a custom downsampling\n",
     "temp = []\n",
-    "for i,c in counts.items():\n",
+    "for i, c in counts.items():\n",
     "    if c < 2000:\n",
-    "        temp.append(ad_raw.obs[ad_raw.obs['patient_number']==i].index.values)\n",
+    "        temp.append(ad_raw.obs[ad_raw.obs[\"patient_number\"] == i].index.values)\n",
     "    elif c < 5000:\n",
-    "        temp.append(ad_raw.obs[ad_raw.obs['patient_number']==i].sample(frac=0.2).index.values)\n",
+    "        temp.append(\n",
+    "            ad_raw.obs[ad_raw.obs[\"patient_number\"] == i].sample(frac=0.2).index.values\n",
+    "        )\n",
     "    elif c < 50000:\n",
-    "        temp.append(ad_raw.obs[ad_raw.obs['patient_number']==i].sample(frac=0.05).index.values)\n",
+    "        temp.append(\n",
+    "            ad_raw.obs[ad_raw.obs[\"patient_number\"] == i].sample(frac=0.05).index.values\n",
+    "        )\n",
     "    elif c > 50000:\n",
-    "        temp.append(ad_raw.obs[ad_raw.obs['patient_number']==i].sample(frac=0.01).index.values)\n",
+    "        temp.append(\n",
+    "            ad_raw.obs[ad_raw.obs[\"patient_number\"] == i].sample(frac=0.01).index.values\n",
+    "        )\n",
     "    else:\n",
-    "        print('Error')\n",
-    "        \n",
-    "temp_array=np.concatenate(temp)\n",
+    "        print(\"Error\")\n",
+    "\n",
+    "temp_array = np.concatenate(temp)\n",
     "ad_sub_custom = ad_raw[temp_array]\n",
     "\n",
     "plt.figure(figsize=(30, 8))\n",
-    "ad_sub_custom.obs['patient_number'].value_counts().plot(kind='bar')\n",
-    "plt.xlabel('Patient ID')\n",
-    "plt.ylabel('Number of cells')\n",
+    "ad_sub_custom.obs[\"patient_number\"].value_counts().plot(kind=\"bar\")\n",
+    "plt.xlabel(\"Patient ID\")\n",
+    "plt.ylabel(\"Number of cells\")\n",
     "plt.show()"
    ]
   },
@@ -220,19 +228,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "markers = ['139La_H3K27me3', '141Pr_K5', '142Nd_PTEN', '143Nd_CD44', '144Nd_K8K18','145Nd_CD31', '146Nd_FAP', \n",
-    "           '147Sm_cMYC', '148Nd_SMA', '149Sm_CD24', '150Nd_CD68', '151Eu_HER2', '152Sm_AR', '153Eu_BCL2', \n",
-    "           '154Sm_p53', '155Gd_EpCAM', '156Gd_CyclinB1', '158Gd_PRB', '159Tb_CD49f', '160Gd_Survivin', '161Dy_EZH2', \n",
-    "           '162Dy_Vimentin', '163Dy_cMET', '164Dy_AKT', '165Ho_ERa', '166Er_CA9', '167Er_ECadherin', '168Er_Ki67', \n",
-    "           '169Tm_EGFR', '170Er_K14', '171Yb_HLADR', '172Yb_clCASP3clPARP1', '173Yb_CD3', '174Yb_K7', \n",
-    "           '175Lu_panK', '176Yb_CD45']\n",
+    "markers = [\n",
+    "    \"139La_H3K27me3\",\n",
+    "    \"141Pr_K5\",\n",
+    "    \"142Nd_PTEN\",\n",
+    "    \"143Nd_CD44\",\n",
+    "    \"144Nd_K8K18\",\n",
+    "    \"145Nd_CD31\",\n",
+    "    \"146Nd_FAP\",\n",
+    "    \"147Sm_cMYC\",\n",
+    "    \"148Nd_SMA\",\n",
+    "    \"149Sm_CD24\",\n",
+    "    \"150Nd_CD68\",\n",
+    "    \"151Eu_HER2\",\n",
+    "    \"152Sm_AR\",\n",
+    "    \"153Eu_BCL2\",\n",
+    "    \"154Sm_p53\",\n",
+    "    \"155Gd_EpCAM\",\n",
+    "    \"156Gd_CyclinB1\",\n",
+    "    \"158Gd_PRB\",\n",
+    "    \"159Tb_CD49f\",\n",
+    "    \"160Gd_Survivin\",\n",
+    "    \"161Dy_EZH2\",\n",
+    "    \"162Dy_Vimentin\",\n",
+    "    \"163Dy_cMET\",\n",
+    "    \"164Dy_AKT\",\n",
+    "    \"165Ho_ERa\",\n",
+    "    \"166Er_CA9\",\n",
+    "    \"167Er_ECadherin\",\n",
+    "    \"168Er_Ki67\",\n",
+    "    \"169Tm_EGFR\",\n",
+    "    \"170Er_K14\",\n",
+    "    \"171Yb_HLADR\",\n",
+    "    \"172Yb_clCASP3clPARP1\",\n",
+    "    \"173Yb_CD3\",\n",
+    "    \"174Yb_K7\",\n",
+    "    \"175Lu_panK\",\n",
+    "    \"176Yb_CD45\",\n",
+    "]\n",
     "\n",
     "mask = []\n",
     "for m in markers:\n",
     "    mask.append(ad_sub_custom.var.desc.str.contains(m))\n",
     "mask = pd.concat(mask, axis=1)\n",
     "mask = mask.any(1)\n",
-    "ad_sub_custom.var['used_in_clf'] = mask\n",
+    "ad_sub_custom.var[\"used_in_clf\"] = mask\n",
     "ad_sub_custom = ad_sub_custom[:, ad_sub_custom.var.used_in_clf]\n",
     "\n",
     "# get raw data and arcsinh-transform using a cofactor of 5\n",
@@ -240,12 +280,12 @@
     "cofactor = 5\n",
     "np.divide(X, cofactor, out=X)\n",
     "np.arcsinh(X, out=X)\n",
-    "ad_sub_custom.layers['arcsinh'] = X\n",
+    "ad_sub_custom.layers[\"arcsinh\"] = X\n",
     "\n",
     "# min-max normalization\n",
     "minMax = MinMaxScaler()\n",
     "X = minMax.fit_transform(X)\n",
-    "ad_sub_custom.layers['arcsinh_norm'] = X"
+    "ad_sub_custom.layers[\"arcsinh_norm\"] = X"
    ]
   },
   {
@@ -258,7 +298,7 @@
     "# compute neighbors and run leiden clustering algorithm\n",
     "sc.pp.neighbors(ad_sub_custom, n_neighbors=30)\n",
     "sc.tl.leiden(ad_sub_custom)\n",
-    "labels_clust=ad_sub_custom.obs['leiden'].astype(int)"
+    "labels_clust = ad_sub_custom.obs[\"leiden\"].astype(int)"
    ]
   },
   {
@@ -289,11 +329,19 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame(data = ad_sub_custom.layers['arcsinh'], columns = markers, index = ad_sub_custom.obs.index)\n",
-    "df.insert(0, 'cluster_id', labels_clust)\n",
+    "df = pd.DataFrame(\n",
+    "    data=ad_sub_custom.layers[\"arcsinh\"], columns=markers, index=ad_sub_custom.obs.index\n",
+    ")\n",
+    "df.insert(0, \"cluster_id\", labels_clust)\n",
     "\n",
-    "ax = sns.clustermap(df.groupby('cluster_id').median(), metric='euclidean', standard_scale=1,  method='average', \n",
-    "                    cmap=\"Spectral_r\", figsize=(10, 10))"
+    "ax = sns.clustermap(\n",
+    "    df.groupby(\"cluster_id\").median(),\n",
+    "    metric=\"euclidean\",\n",
+    "    standard_scale=1,\n",
+    "    method=\"average\",\n",
+    "    cmap=\"Spectral_r\",\n",
+    "    figsize=(10, 10),\n",
+    ")"
    ]
   }
  ],
