--- a/tutorials/Custom_models.ipynb
+++ b/tutorials/Custom_models.ipynb
@@ -30,7 +30,8 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore', \".* does not have many workers.*\")"
+    "\n",
+    "warnings.filterwarnings(\"ignore\", \".* does not have many workers.*\")"
    ]
   },
   {
@@ -66,19 +67,28 @@
    "outputs": [],
    "source": [
     "class MyTorchModel(nn.Module):\n",
-    "\n",
     "    def __init__(self, n_in=100):\n",
     "        super().__init__()\n",
     "        self.encoder = nn.Sequential(\n",
-    "                                   nn.Linear(n_in, 32), nn.ReLU(),\n",
-    "                                   nn.Linear(32, 16), nn.ReLU(),\n",
-    "                                   nn.Linear(16, 8), nn.ReLU(),\n",
-    "                                   nn.Linear(8, 4))\n",
-    "        \n",
-    "        self.decoder = nn.Sequential(nn.Linear(4, 8), nn.ReLU(),\n",
-    "                                   nn.Linear(8, 16), nn.ReLU(),\n",
-    "                                   nn.Linear(16, 32), nn.ReLU(),\n",
-    "                                   nn.Linear(32, n_in), nn.Sigmoid())\n",
+    "            nn.Linear(n_in, 32),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(32, 16),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(16, 8),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(8, 4),\n",
+    "        )\n",
+    "\n",
+    "        self.decoder = nn.Sequential(\n",
+    "            nn.Linear(4, 8),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(8, 16),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(16, 32),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(32, n_in),\n",
+    "            nn.Sigmoid(),\n",
+    "        )\n",
     "\n",
     "    def forward(self, x):\n",
     "        return self.decoder(self.encoder(x))"
@@ -119,7 +129,7 @@
     }
    ],
    "source": [
-    "X = torch.rand(20,100)\n",
+    "X = torch.rand(20, 100)\n",
     "model = MyTorchModel()\n",
     "model(X)[:10, :5]"
    ]
@@ -161,7 +171,7 @@
    "outputs": [],
    "source": [
     "class MyLightningModule(pl.LightningModule):\n",
-    "    def __init__(self,n_in=100):\n",
+    "    def __init__(self, n_in=100):\n",
     "        super().__init__()\n",
     "        self.model = MyTorchModel(n_in=n_in)\n",
     "        self.loss = nn.MSELoss()\n",
@@ -174,24 +184,24 @@
     "        x, y = batch\n",
     "        y_hat = self.model(x)  # self(x) would call self.forward(x)\n",
     "        loss = self.loss(y_hat, y)\n",
-    "        self.log('fit_loss', loss.detach())\n",
-    "        self.log('train_mse', self.metric_mse(y_hat, y))\n",
+    "        self.log(\"fit_loss\", loss.detach())\n",
+    "        self.log(\"train_mse\", self.metric_mse(y_hat, y))\n",
     "        return loss\n",
     "\n",
     "    def validation_step(self, batch, batch_idx):\n",
     "        x, y = batch\n",
     "        y_hat = self.model(x)  # self(x) would call self.forward(x)\n",
     "        loss = self.loss(y_hat, y)\n",
-    "        self.log('val_loss', loss.detach())\n",
-    "        self.log('val_mse', self.metric_mse(y_hat, y))\n",
+    "        self.log(\"val_loss\", loss.detach())\n",
+    "        self.log(\"val_mse\", self.metric_mse(y_hat, y))\n",
     "        return loss\n",
     "\n",
     "    def test_step(self, batch, batch_idx):\n",
     "        x, y = batch\n",
     "        y_hat = self.model(x)  # self(x) would call self.forward(x)\n",
     "        loss = self.loss(y_hat, y)\n",
-    "        self.log('test_loss', loss.detach())\n",
-    "        self.log('test_mse', self.metric_mse(y_hat, y))\n",
+    "        self.log(\"test_loss\", loss.detach())\n",
+    "        self.log(\"test_mse\", self.metric_mse(y_hat, y))\n",
     "        return loss\n",
     "\n",
     "    def configure_optimizers(self):\n",
@@ -321,7 +331,7 @@
    "outputs": [],
    "source": [
     "ds = MyDataset(np.random.rand(10000, 100))\n",
-    "X,y = ds[0] # iterate over dataset"
+    "X, y = ds[0]  # iterate over dataset"
    ]
   },
   {
@@ -343,7 +353,13 @@
    "outputs": [],
    "source": [
     "class MyDataModule(pl.LightningDataModule):\n",
-    "    def __init__(self, dataset, test_size: float = 0.2, validation_size: float = 0.1, batch_size: int = 256):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        dataset,\n",
+    "        test_size: float = 0.2,\n",
+    "        validation_size: float = 0.1,\n",
+    "        batch_size: int = 256,\n",
+    "    ):\n",
     "        super().__init__()\n",
     "        l = len(dataset)\n",
     "        self.ds: Dataset = dataset\n",
@@ -357,11 +373,13 @@
     "\n",
     "    def setup(self, stage=None):\n",
     "        self.fit, self.test = random_split(self.ds, [self.train_size, self.test_size])\n",
-    "        self.fit, self.validation = random_split(self.fit, [self.fit_size, self.validation_size])\n",
+    "        self.fit, self.validation = random_split(\n",
+    "            self.fit, [self.fit_size, self.validation_size]\n",
+    "        )\n",
     "\n",
     "    def train_dataloader(self):\n",
     "        return DataLoader(self.fit, batch_size=self.batch_size, shuffle=True)\n",
-    "    \n",
+    "\n",
     "    def val_dataloader(self):\n",
     "        return DataLoader(self.validation, batch_size=self.batch_size)\n",
     "\n",
@@ -468,9 +486,11 @@
     "ad = sc.datasets.pbmc68k_reduced()\n",
     "var = ad.var.copy()\n",
     "\n",
-    "ad = sc.concat([ad.copy() for _ in range(10)])  # replicate examples to increase dataset size\n",
+    "ad = sc.concat(\n",
+    "    [ad.copy() for _ in range(10)]\n",
+    ")  # replicate examples to increase dataset size\n",
     "ad.obs_names_make_unique()\n",
-    "ad.var = pd.concat([ad.var,var], axis=1)\n",
+    "ad.var = pd.concat([ad.var, var], axis=1)\n",
     "ad"
    ]
   },
@@ -506,11 +526,13 @@
     "ad = ad[:, ad.var.highly_variable]\n",
     "ad = ad[:, :N]\n",
     "\n",
-    "ad.layers['X_norm'] = MinMaxScaler().fit_transform(ad.X)\n",
+    "ad.layers[\"X_norm\"] = MinMaxScaler().fit_transform(ad.X)\n",
     "\n",
-    "fig, axs = plt.subplots(1,2, figsize=(12,6))\n",
-    "ax = sns.heatmap(ad.layers['X_norm'][np.argsort(ad.obs.louvain.values), :], ax=axs[0], cmap = 'magma')\n",
-    "ax = sns.heatmap(ad.layers['X_norm'], ax=axs[1], cmap = 'magma')"
+    "fig, axs = plt.subplots(1, 2, figsize=(12, 6))\n",
+    "ax = sns.heatmap(\n",
+    "    ad.layers[\"X_norm\"][np.argsort(ad.obs.louvain.values), :], ax=axs[0], cmap=\"magma\"\n",
+    ")\n",
+    "ax = sns.heatmap(ad.layers[\"X_norm\"], ax=axs[1], cmap=\"magma\")"
    ]
   },
   {
@@ -566,7 +588,7 @@
    "source": [
     "# default\n",
     "Abn = scq.Abnormality(n_in=N)\n",
-    "Abn.fit(ad, layer='X_norm', max_epochs=100, enable_progress_bar=False)"
+    "Abn.fit(ad, layer=\"X_norm\", max_epochs=100, enable_progress_bar=False)"
    ]
   },
   {
@@ -613,7 +635,7 @@
     "# custom model\n",
     "model = MyTorchModel(n_in=N)\n",
     "Abn = scq.Abnormality(model=model)\n",
-    "Abn.fit(ad, layer='X_norm', max_epochs=100, enable_progress_bar=False)"
+    "Abn.fit(ad, layer=\"X_norm\", max_epochs=100, enable_progress_bar=False)"
    ]
   },
   {
@@ -660,7 +682,7 @@
     "# custom module\n",
     "module = MyLightningModule(n_in=N)\n",
     "Abn = scq.Abnormality(model=module)\n",
-    "Abn.fit(ad, layer='X_norm', max_epochs=100, enable_progress_bar=False)"
+    "Abn.fit(ad, layer=\"X_norm\", max_epochs=100, enable_progress_bar=False)"
    ]
   },
   {
@@ -707,7 +729,7 @@
    ],
    "source": [
     "# custom datamodule, default model\n",
-    "ds = MyDataset(ad.layers['X_norm'])\n",
+    "ds = MyDataset(ad.layers[\"X_norm\"])\n",
     "dm = MyDataModule(ds)\n",
     "\n",
     "Abn = scq.Abnormality(n_in=N)\n",
@@ -790,7 +812,7 @@
     }
    ],
    "source": [
-    "Abn.predict(ad, layer='X_norm')\n",
+    "Abn.predict(ad, layer=\"X_norm\")\n",
     "ad.layers.keys()"
    ]
   },
@@ -815,20 +837,22 @@
    ],
    "source": [
     "# estimate reconstruction error on the training data\n",
-    "y = ad.layers['X_norm']\n",
+    "y = ad.layers[\"X_norm\"]\n",
     "yhat = Abn.model.model(torch.tensor(y)).detach().numpy()  # access base torch model\n",
-    "err = ad.layers['abnormality']\n",
+    "err = ad.layers[\"abnormality\"]\n",
     "\n",
     "fig, axs = plt.subplots(1, 3, figsize=(18, 6))\n",
-    "for ax, dat, title in zip(axs.flat, [y, yhat, err], ['Input', 'Reconstruction', 'Error']):\n",
+    "for ax, dat, title in zip(\n",
+    "    axs.flat, [y, yhat, err], [\"Input\", \"Reconstruction\", \"Error\"]\n",
+    "):\n",
     "    ax: plt.Axes\n",
-    "    cmap = 'seismic' if title == 'Error' else 'magma'\n",
-    "    vmin = -1 if title == 'Error' else 0\n",
-    "    _ = sns.heatmap(dat, ax=ax, cmap = cmap, vmin=vmin, vmax=1)\n",
+    "    cmap = \"seismic\" if title == \"Error\" else \"magma\"\n",
+    "    vmin = -1 if title == \"Error\" else 0\n",
+    "    _ = sns.heatmap(dat, ax=ax, cmap=cmap, vmin=vmin, vmax=1)\n",
     "    ax.set_title(title)\n",
     "    ax.set_xticklabels([])\n",
     "    ax.set_yticklabels([])\n",
-    "_ = axs[0].set_ylabel('cells')"
+    "_ = axs[0].set_ylabel(\"cells\")"
    ]
   }
  ],
