clean setup and black [skip ci]

--- a/tutorials/scQUEST_tutorial.ipynb
+++ b/tutorials/scQUEST_tutorial.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "9116e260",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# scQUEST Tutorial"
    ]
@@ -1233,9 +1237,9 @@
     "data = ad.obs.copy()\n",
     "frac_epith = (\n",
     "    data.groupby([\"tissue_type\", \"breast\", \"patient_number\"])\n",
-    "    .is_epithelial.mean()\n",
-    "    .dropna()\n",
-    "    .reset_index()\n",
+    "        .is_epithelial.mean()\n",
+    "        .dropna()\n",
+    "        .reset_index()\n",
     ")\n",
     "fig, ax = plt.subplots()\n",
     "sns.boxplot(y=\"is_epithelial\", x=\"tissue_type\", data=frac_epith, ax=ax, whis=[0, 100])\n",
@@ -1807,7 +1811,7 @@
     "\n",
     "fig, axs = plt.subplots(1, 3, figsize=(14, 6))\n",
     "for ax, dat, title in zip(\n",
-    "    axs.flat, [y, yhat, err], [\"Input\", \"Reconstruction\", \"Error\"]\n",
+    "        axs.flat, [y, yhat, err], [\"Input\", \"Reconstruction\", \"Error\"]\n",
     "):\n",
     "    ax: plt.Axes\n",
     "    cmap = \"seismic\" if title == \"Error\" else \"magma\"\n",
@@ -1960,7 +1964,7 @@
    "source": [
     "fig, axs = plt.subplots(1, 3, figsize=(20, 10))\n",
     "for ax, dat, title in zip(\n",
-    "    axs.flat, [y, yhat, err], [\"Input\", \"Reconstruction\", \"Error\"]\n",
+    "        axs.flat, [y, yhat, err], [\"Input\", \"Reconstruction\", \"Error\"]\n",
     "):\n",
     "    ax: plt.Axes\n",
     "    cmap = \"seismic\" if title == \"Error\" else \"magma\"\n",
@@ -2023,9 +2027,9 @@
     "for i in range(4):\n",
     "    dat = (\n",
     "        ad_pred.obs.groupby([clinical_data[i], \"breast\", \"patient_number\"])\n",
-    "        .abnormality.agg(np.median)\n",
-    "        .dropna()\n",
-    "        .reset_index()\n",
+    "            .abnormality.agg(np.median)\n",
+    "            .dropna()\n",
+    "            .reset_index()\n",
     "    )\n",
     "    sns.boxplot(\n",
     "        data=dat,\n",
